tests/source1/pass/expr_arithmetic_op7.js
-(1);
// expected: -1.000000