tests/source1/fail/runtime_typecheck10.js
display(-true);
// expected: error: "boo type mismatch"